fixed bug in get_books was getting multiple books rows for different ext_infos -> fixed by group by books.id add anyway button when jumping url added webgui view outdated

--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -183,6 +183,9 @@ li.warning {
 	font-size: 20px;
 	color: #f67764; /* #f67764 */
 }
+ul.flash-messages a.underline {
+    text-decoration: underline;
+}
 
 .pink-color{background-color: #a233a5 !important} /* #a72aaa */
 .star-inactive {
